Added code to load cassandra.yaml from home directory